Minor color fixes on dark mode

--- a/ui/src/App.css
+++ b/ui/src/App.css
@@ -163,7 +163,45 @@ input:not(.ant-input) {
   background-color: var(--coolor1);
   padding: 15px;
 }
-
+.ant-table-wrapper .ant-table-thead > tr > td {
+  background-color: var(--coolor5);
+}
+.ant-table-wrapper .ant-table-row-expand-icon {
+  color: inherit;
+  text-decoration: none;
+  outline: none;
+  cursor: pointer;
+  transition: all 0.3s;
+  position: relative;
+  float: left;
+  box-sizing: border-box;
+  width: 17px;
+  height: 17px;
+  padding: 0;
+  line-height: 17px;
+  background: var(--coolor20);
+  border: 1px solid var(--coolor18);
+  border-radius: 6px;
+  transform: scale(0.9411764705882353);
+  user-select: none;
+}
+.ant-pagination .ant-pagination-item-active {
+  font-weight: 600;
+  background-color: var(--coolor3);
+  border-color: var(--coolor7);
+}
+.ant-pagination .ant-pagination-item-active > a {
+  color: white;
+}
+.ant-pagination .ant-pagination-item-active:hover {
+  border-color: var(--coolor20);
+}
+.ant-pagination .ant-pagination-item-active:hover > a{
+  color: white;
+}
+.ant-table-wrapper .ant-table-tbody > tr.ant-table-placeholder {
+  background: var(--coolor4);
+}
 .ant-picker-dropdown .ant-picker-content th {
   color: var(--coolor16);
   font-weight: bold;
